<resources>
    <string name="app_name">IoT Control</string>

    <!--list device strings -->
    <string name="connection_status_device_online">Соединение установлено</string>
    <string name="connection_status_device_offline">Устройство недоступно</string>
    <string name="connection_status_device_waiting_for_connection_status_check">Ожидание проверки подключения</string>

    <string name="button_control">Кнопка изменения состояния устройства</string>
    <string name="device_status">Статус подключения</string>
    <string name="edit_device">Редактировать информацию об устройстве</string>
    <string name="delete_device">Удалить устройство</string>

    <!--add device strings-->
    <string name="add_activity_name">Добавление нового устройства</string>
    <string name="type_connection_wifi">Тип подключени: wifi</string>
    <string name="type_connection_bluetooth">Тип подключени: bluetooth</string>

    <!-- BT add fragment strings -->
    <string name="device_name">Название устройства</string>
    <string name="device_type">Тип устройства:</string>
    <string name="bound_devices">Устройство:</string>
    <string name="cancel">Отмена</string>
    <string name="create">Создать</string>

    <!-- WF add fragment strings -->
    <string name="clientId">Идентификатор клиента</string>
    <string name="hostURL">Имя хоста</string>
    <string name="publicTop">Топик</string>
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>

    <!-- device menu strings -->
    <string name="out_of_sight">Не удалось подключится к устройству</string>
    <string name="synchronize_time">Синхронизировать время</string>

    <!-- list timer strings-->
    <string name="from_status">Начальное состояние</string>
    <string name="direction">Направление перехода</string>
    <string name="to_status">Конечное состояние</string>
    <string name="device_time">Время на устройстве:</string>
    <string name="timer_singly">Однократно</string>
    <string name="timer_everyday">Каждый день</string>
    <string name="timer_weekday">По будням</string>
    <string name="timer_weekend">По выходным</string>
    <string name="createNewTimer">Создать новый таймер</string>
    <string name="editTimers">Редактировать таймеры</string>
    <string name="editTimer">Изменить таймер</string>
    <string name="delete_timer">Удалить таймер</string>

    <!-- New -->
</resources>
