<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_device"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="14dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textConnect"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/connection_status_device_waiting_for_connection_status_check"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/deviceStatus"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:padding="11dp"
        android:backgroundTint="#0000"
        android:contentDescription="@string/button_control"
        app:srcCompat="@drawable/ic_device_off"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageConnect"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:padding="11dp"
        app:srcCompat="@drawable/ic_bluetooth_disconnected"
        android:contentDescription="@string/device_status" />

    <ImageView
        android:id="@+id/imageEdit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:padding="11dp"
        android:tint="@color/lightOrange"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/edit_device"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:padding="11dp"
        app:srcCompat="@drawable/ic_delete"
        android:contentDescription="@string/delete_device"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:padding="8dp"
        android:visibility="gone"/>
</LinearLayout>